+ fixed register functions + doing login

--- a/src/gui/RegisterFrame.form
+++ b/src/gui/RegisterFrame.form
@@ -93,7 +93,7 @@
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="btnRegister" min="-2" max="-2" attributes="0"/>
-                                  <Component id="pwfRePass" max="32767" attributes="0"/>
+                                  <Component id="pwFRePass" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
@@ -142,7 +142,7 @@
                       <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="lblRePass" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                          <Component id="pwfRePass" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                          <Component id="pwFRePass" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
                       <Component id="btnRegister" min="-2" max="-2" attributes="0"/>
@@ -190,7 +190,10 @@
             </Component>
             <Component class="javax.swing.JPasswordField" name="pwFPass">
             </Component>
-            <Component class="javax.swing.JPasswordField" name="pwfRePass">
+            <Component class="javax.swing.JPasswordField" name="pwFRePass">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pwFRePassActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
