+ insert budget and expenditure done

--- a/src/gui/MainFrame.form
+++ b/src/gui/MainFrame.form
@@ -834,7 +834,7 @@
                                   <Group type="102" attributes="0">
                                       <Component id="labelPurpose" min="-2" pref="93" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="txtFieldPurpose" min="-2" pref="200" max="-2" attributes="0"/>
+                                      <Component id="txtFPurpose" min="-2" pref="200" max="-2" attributes="0"/>
                                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
@@ -842,7 +842,7 @@
                                           <Group type="102" alignment="0" attributes="0">
                                               <Component id="labelSumExpenditure" min="-2" pref="94" max="-2" attributes="0"/>
                                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                                              <Component id="txtFieldSumExpenditure" min="-2" pref="200" max="-2" attributes="0"/>
+                                              <Component id="txtFSumExpenditure" min="-2" pref="200" max="-2" attributes="0"/>
                                           </Group>
                                           <Group type="102" alignment="0" attributes="0">
                                               <EmptySpace min="-2" pref="9" max="-2" attributes="0"/>
@@ -851,13 +851,13 @@
                                                       <Component id="labelCategory" min="-2" pref="85" max="-2" attributes="0"/>
                                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                          <Component id="jRadioButton2" max="32767" attributes="0"/>
+                                                          <Component id="radioBtnFD" max="32767" attributes="0"/>
                                                           <Component id="radioBtnShopping" min="-2" pref="103" max="-2" attributes="0"/>
                                                       </Group>
                                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                          <Component id="jRadioButton3" max="32767" attributes="0"/>
-                                                          <Component id="jRadioButton4" min="-2" pref="90" max="-2" attributes="0"/>
+                                                          <Component id="radioBtnBU" max="32767" attributes="0"/>
+                                                          <Component id="radioBtnOthers" min="-2" pref="90" max="-2" attributes="0"/>
                                                       </Group>
                                                   </Group>
                                                   <Group type="102" attributes="0">
@@ -879,12 +879,12 @@
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="txtFieldPurpose" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
+                                  <Component id="txtFPurpose" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                                   <Component id="labelPurpose" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="txtFieldSumExpenditure" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
+                                  <Component id="txtFSumExpenditure" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                                   <Component id="labelSumExpenditure" alignment="3" min="-2" pref="24" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
@@ -898,12 +898,12 @@
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="3" attributes="0">
                                           <Component id="radioBtnShopping" alignment="3" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jRadioButton3" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="radioBtnBU" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="3" attributes="0">
-                                          <Component id="jRadioButton2" alignment="3" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jRadioButton4" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="radioBtnFD" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="radioBtnOthers" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -924,9 +924,9 @@
                         <Property name="text" type="java.lang.String" value="Purpose : "/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JTextField" name="txtFieldPurpose">
+                    <Component class="javax.swing.JTextField" name="txtFPurpose">
                     </Component>
-                    <Component class="javax.swing.JTextField" name="txtFieldSumExpenditure">
+                    <Component class="javax.swing.JTextField" name="txtFSumExpenditure">
                     </Component>
                     <Component class="javax.swing.JLabel" name="labelSumExpenditure">
                       <Properties>
@@ -960,7 +960,7 @@
                         <Property name="opaque" type="boolean" value="false"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JRadioButton" name="jRadioButton2">
+                    <Component class="javax.swing.JRadioButton" name="radioBtnFD">
                       <Properties>
                         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="ff" green="fb" red="e9" type="rgb"/>
@@ -972,7 +972,7 @@
                         <Property name="opaque" type="boolean" value="false"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JRadioButton" name="jRadioButton3">
+                    <Component class="javax.swing.JRadioButton" name="radioBtnBU">
                       <Properties>
                         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="ff" green="fb" red="e9" type="rgb"/>
@@ -984,7 +984,7 @@
                         <Property name="opaque" type="boolean" value="false"/>
                       </Properties>
                     </Component>
-                    <Component class="javax.swing.JRadioButton" name="jRadioButton4">
+                    <Component class="javax.swing.JRadioButton" name="radioBtnOthers">
                       <Properties>
                         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                           <Color blue="ff" green="fb" red="e9" type="rgb"/>
@@ -1000,6 +1000,9 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Submit"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JLabel" name="labelCategory">
                       <Properties>
